# OlineTalk

./: CMakeLists.txt  README.md
FileOperatorProcess/include/: LocalSocketServer.h  TaskHandler.h  TaskQueue.h  singleton.h
FileOperatorProcess/src/: LocalSocketServer.cpp  TaskHandler.cpp  TaskQueue.cpp  main.cpp
include/: BubbleFrame.h  ChatHistoryDataModel.h  ChatHistoryDisplayDelegate.h  ChatHistoryItemSelectionModel.h  ChatHistoryView.h  ChatUserList.h  ClickedFrame.h  ClickedLabel.h  ClickedOnceLabel.h  ConnectUserListDisplayDelegate.h  ConnectUserListModel.h  ConnectUserListView.h  DisplayMessageNumsLabel.h  DisplayUserIconsLabel.h  HistoryDB_Mgr.h  HttpMgr.h  IChatHistoryProvider.h  ListItemBase.h  MessageTextEdit.h  MultiSelectionHistoryWidget.h  NewAddFriendApplicationWidget.h  NewFriendApplicationListDelegate.h  NewFriendApplicationListModel.h  NewFriendApplicationListView.h  PictureBubble.h  RecentChatUsersList.h  RecentChatUsersListDelegate.h  RecentChatUsersListModel.h  SerachEdit.h  StateWidget.h  StatusChangeButton.h  StyleManager.h  SystemTrayIcon.h  TcpMgr.h  TextBubble.h  add_friend_widget.h  add_user_item.h  chat_ui.h  chat_user_display.h  chatitembase.h  (+20 more)
resources/: res.qrc
resources/style/: chat_ui.qss  chatpage.qss  chatview.qss  chatview_usage_example.txt  global.qss  register_ui.qss  stylesheet.qss
src/HttpMgr/: HttpMgr.cpp
src/Main/: main.cpp
src/chat_ui/: chat_ui.cpp
src/forgetpasswdui/: forgetpasswdui.cpp
src/global/: BubbleFrame.cpp  ChatHistoryDataModel.cpp  ChatHistoryDisplayDelegate.cpp  ChatHistoryItemSelectionModel.cpp  ChatHistoryView.cpp  ChatUserListcpp.cpp  ClickedFrame.cpp  ClickedLabel.cpp  ClickedOnceLabel.cpp  ConnectUserListDisplayDelegate.cpp  ConnectUserListModel.cpp  ConnectUserListView.cpp  DisplayMessageNumsLabel.cpp  DisplayUserIconsLabel.cpp  HistoryDB_Mgr.cpp  ListItemBase.cpp  MessageTextEdit.cpp  MultiSelectionHistoryWidget.cpp  NewAddFriendApplicationWidget.cpp  NewFriendApplicationListDelegate.cpp  NewFriendApplicationListModel.cpp  NewFriendApplicationListView.cpp  PictureBubble.cpp  RecentChatUsersList.cpp  RecentChatUsersListDelegate.cpp  RecentChatUsersListModel.cpp  SerachEdit.cpp  StateWidget.cpp  StatusChangeButton.cpp  StyleManager.cpp  SystemTrayIcon.cpp  TcpMgr.cpp  TextBubble.cpp  add_friend_widget.cpp  add_user_item.cpp  chat_user_display.cpp  chatitembase.cpp  chatpage.cpp  chatview.cpp  find_success_widget.cpp  (+11 more)
src/loginui/: loginui.cpp
src/mainwindow/: mainwindow.cpp
src/registerui/: registerui.cpp  timerbutton.cpp
ui/: NewAddFriendApplicationWidget.ui  add_friend_widget.ui  add_user_item.ui  chat_ui.ui  chat_user_display.ui  chatpage.ui  find_success_widget.ui  forgetpasswdui.ui  gif_play_view.ui  loadinguserwidget.ui  loginui.ui  mainwindow.ui  registerui.ui
